Used older API of Locale